--- a/job03/风采展示.html
+++ b/job03/风采展示.html
@@ -15,6 +15,7 @@
         <a href="./job3index.html">返回顶部</a>
     </div>
     
-    <video src="./music/It Takes Two 2025.07.16 - 00.53.59.06.mp4" controls loop autoplay></video>
+    <video src="./music/Desktop 2025.11.09 - 16.26.31.06.mp4" controls loop autoplay></video>
 </body>
+
 </html>
